Name change of theme

--- a/config/install/block.block.nighthawk_base_theme_footercolumn3.yml
+++ b/config/install/block.block.nighthawk_base_theme_footercolumn3.yml
@@ -6,9 +6,9 @@ dependencies:
   module:
     - block_content
   theme:
-    - nighthawk_base
-id: nighthawk_base_footercolumn3
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_footercolumn3
+theme: nighthawk_base_theme
 region: footer_third
 weight: 0
 provider: null
