--- a/config/install/config_ignore.settings.yml
+++ b/config/install/config_ignore.settings.yml
@@ -1,6 +1,6 @@
 mode: intermediate
 ignored_config_entities:
   import:
-    - nighthawk_base.settings
+    - nighthawk_base_theme.settings
     - system.theme.global
   export: {  }
