--- a/config/install/block.block.nighthawk_base_theme_copyright.yml
+++ b/config/install/block.block.nighthawk_base_theme_copyright.yml
@@ -6,9 +6,9 @@ dependencies:
   module:
     - block_content
   theme:
-    - nighthawk_base
-id: nighthawk_base_copyright
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_copyright
+theme: nighthawk_base_theme
 region: footer_copyright
 weight: -1
 provider: null
