--- a/config/install/block.block.nighthawk_base_theme_footercolumn2.yml
+++ b/config/install/block.block.nighthawk_base_theme_footercolumn2.yml
@@ -6,9 +6,9 @@ dependencies:
   module:
     - block_content
   theme:
-    - nighthawk_base
-id: nighthawk_base_footercolumn2
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_footercolumn2
+theme: nighthawk_base_theme
 region: footer_second
 weight: 0
 provider: null
