--- a/config/install/block.block.nighthawk_base_theme_footercopyrightmenu.yml
+++ b/config/install/block.block.nighthawk_base_theme_footercopyrightmenu.yml
@@ -6,9 +6,9 @@ dependencies:
   module:
     - system
   theme:
-    - nighthawk_base
-id: nighthawk_base_footercopyrightmenu
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_footercopyrightmenu
+theme: nighthawk_base_theme
 region: footer_copyright
 weight: 0
 provider: null
