--- a/config/install/block.block.nighthawk_base_theme_help.yml
+++ b/config/install/block.block.nighthawk_base_theme_help.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - help
   theme:
-    - nighthawk_base
-id: nighthawk_base_help
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_help
+theme: nighthawk_base_theme
 region: highlighted
 weight: -2
 provider: null
