--- a/config/install/block.block.nighthawk_base_theme_login.yml
+++ b/config/install/block.block.nighthawk_base_theme_login.yml
@@ -6,9 +6,9 @@ dependencies:
   module:
     - system
   theme:
-    - nighthawk_base
-id: nighthawk_base_login
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_login
+theme: nighthawk_base_theme
 region: header_top_right
 weight: -8
 provider: null
