--- a/config/install/block.block.nighthawk_base_theme_mainnavigation.yml
+++ b/config/install/block.block.nighthawk_base_theme_mainnavigation.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - tb_megamenu
   theme:
-    - nighthawk_base
-id: nighthawk_base_mainnavigation
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_mainnavigation
+theme: nighthawk_base_theme
 region: header_bottom_right
 weight: -8
 provider: null
