--- a/config/install/block.block.nighthawk_base_theme_searchform.yml
+++ b/config/install/block.block.nighthawk_base_theme_searchform.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - search
   theme:
-    - nighthawk_base
-id: nighthawk_base_searchform
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_searchform
+theme: nighthawk_base_theme
 region: header_top_right
 weight: -9
 provider: null
