--- a/config/install/block.block.nighthawk_base_theme_secondary_local_tasks.yml
+++ b/config/install/block.block.nighthawk_base_theme_secondary_local_tasks.yml
@@ -2,9 +2,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - nighthawk_base
-id: nighthawk_base_secondary_local_tasks
-theme: nighthawk_base
+    - nighthawk_base_theme
+id: nighthawk_base_theme_secondary_local_tasks
+theme: nighthawk_base_theme
 region: content
 weight: -8
 provider: null
